CaSSiS 0.5.1 (released June 12th, 2014; maintenance release)
------------------------------------------------------
The following items were fixed and/or added:

* Fixed minor dependency problems in the source code.


CaSSiS 0.5.0 (released August 6th, 2012; stable release)
------------------------------------------------------
The following items were fixed and/or added:

* Added '-list' parameter to allow processing without phylogenetic trees.
* Updated ARB compatibility.
* Disabled warnings when processing huge sequence datasets.
* Fixed mismatch parameter settings.
* Set MiniPT tree depth (i.e. signature length limit) to 25.
* Fixed a bug in the melting temperature formula.
* Added a test tool for thermodynamic parameters.
* Minor changes in the graphviz visualization tool.
* Added (untested) DUP support.
* Added stubs for the index server.
* Major refactoring.
* Added another form of detailed output: Signature files.
* Minor changes in cmake build chain.
* Unofficial pThread support.
* Various fixes for the (untested) pThreads version.
* Added a second output format: Detailed CSV
* Updated various copyright headers and comments.
* Updated (better) error messages instead of mere assertions.
* Various bugfixes that address the formatting of the input file.


CaSSiS 0.4.0 (released January 14th, 2012; stable release)
------------------------------------------------------
The following items were fixed and/or added:

* CaSSiS is now under the LPGL v3 license.
* Added "bgrt2graphviz" tool for testing purposes.
* Updated/fixed the untested(!) pThreads support.
* Fixed error handling.
* Removed obsolete comments.
* Code clean-up.
* Various changes in the ARB Pt-Server interface.
* Moved MiniPT into its own namespace. Avoids collisions due to global (legacy) variables.
* Added new parameter: check all signatures (all 4^length)
* Disabled CaSSiS tree load when creating a BGRT.
* Reverted the (too high) memory estimation when building a MiniPT index.